// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check login snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-18308nr"
      >
        <div
          class="chakra-stack css-100xlw7"
        >
          <div
            class="chakra-stack css-tl3ftk"
          >
            <h2
              class="chakra-heading css-1gjuw9l"
            >
              Sign in to your account
            </h2>
          </div>
          <div
            class="css-lfqhk9"
          >
            <div
              class="chakra-stack css-1kkt86i"
            >
              <div
                class="chakra-form-control css-0"
                role="group"
              >
                <label
                  class="chakra-form__label css-uvho5g"
                  for="email"
                  id="email-label"
                >
                  Email address
                </label>
                <input
                  class="chakra-input css-0"
                  data-testid="email-login-input"
                  id="email"
                  type="email"
                  value=""
                />
              </div>
              <div
                class="chakra-form-control css-0"
                role="group"
              >
                <label
                  class="chakra-form__label css-uvho5g"
                  for="password"
                  id="password-label"
                >
                  Password
                </label>
                <input
                  class="chakra-input css-0"
                  data-testid="password-login-input"
                  id="password"
                  type="password"
                  value=""
                />
              </div>
              <div
                class="chakra-stack css-bco1gb"
              >
                <div
                  class="chakra-stack css-1ujp649"
                >
                  <label
                    class="chakra-checkbox css-1elxtiq"
                    data-testid="remember-login-checkbox"
                  >
                    <input
                      class="chakra-checkbox__input"
                      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                      type="checkbox"
                      value=""
                    />
                    <span
                      aria-hidden="true"
                      class="chakra-checkbox__control css-dnty2r"
                    />
                    <span
                      class="chakra-checkbox__label css-1oeb2oe"
                    >
                      Remember me
                    </span>
                  </label>
                  <a
                    class="chakra-link css-1lhnvgm"
                  >
                    Forgot password?
                  </a>
                </div>
                <button
                  class="chakra-button css-4xx2wk"
                  type="button"
                >
                  Sign in
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-18308nr"
    >
      <div
        class="chakra-stack css-100xlw7"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <h2
            class="chakra-heading css-1gjuw9l"
          >
            Sign in to your account
          </h2>
        </div>
        <div
          class="css-lfqhk9"
        >
          <div
            class="chakra-stack css-1kkt86i"
          >
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="email"
                id="email-label"
              >
                Email address
              </label>
              <input
                class="chakra-input css-0"
                data-testid="email-login-input"
                id="email"
                type="email"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="password"
                id="password-label"
              >
                Password
              </label>
              <input
                class="chakra-input css-0"
                data-testid="password-login-input"
                id="password"
                type="password"
                value=""
              />
            </div>
            <div
              class="chakra-stack css-bco1gb"
            >
              <div
                class="chakra-stack css-1ujp649"
              >
                <label
                  class="chakra-checkbox css-1elxtiq"
                  data-testid="remember-login-checkbox"
                >
                  <input
                    class="chakra-checkbox__input"
                    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                    type="checkbox"
                    value=""
                  />
                  <span
                    aria-hidden="true"
                    class="chakra-checkbox__control css-dnty2r"
                  />
                  <span
                    class="chakra-checkbox__label css-1oeb2oe"
                  >
                    Remember me
                  </span>
                </label>
                <a
                  class="chakra-link css-1lhnvgm"
                >
                  Forgot password?
                </a>
              </div>
              <button
                class="chakra-button css-4xx2wk"
                type="button"
              >
                Sign in
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`check register snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-18308nr"
      >
        <div
          class="chakra-stack css-100xlw7"
        >
          <div
            class="chakra-stack css-tl3ftk"
          >
            <h2
              class="chakra-heading css-5efzzv"
            >
              Sign up
            </h2>
          </div>
          <div
            class="css-16n56wr"
          >
            <div
              class="chakra-stack css-1kkt86i"
            >
              <div
                class="chakra-stack css-1igwmid"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="chakra-form-control css-0"
                    role="group"
                  >
                    <label
                      class="chakra-form__label css-uvho5g"
                      for="firstName"
                      id="firstName-label"
                    >
                      Name
                      <span
                        aria-hidden="true"
                        class="chakra-form__required-indicator css-0"
                        role="presentation"
                      >
                        *
                      </span>
                    </label>
                    <input
                      aria-required="true"
                      class="chakra-input css-0"
                      data-testid="register-name"
                      id="firstName"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="chakra-form-control css-0"
                    role="group"
                  >
                    <label
                      class="chakra-form__label css-uvho5g"
                      for="lastName"
                      id="lastName-label"
                    >
                      Username
                      <span
                        aria-hidden="true"
                        class="chakra-form__required-indicator css-0"
                        role="presentation"
                      >
                        *
                      </span>
                    </label>
                    <input
                      aria-required="true"
                      class="chakra-input css-0"
                      data-testid="register-username"
                      id="lastName"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="chakra-form-control css-0"
                role="group"
              >
                <label
                  class="chakra-form__label css-uvho5g"
                  for="email"
                  id="email-label"
                >
                  Email address
                  <span
                    aria-hidden="true"
                    class="chakra-form__required-indicator css-0"
                    role="presentation"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-required="true"
                  class="chakra-input css-0"
                  data-testid="register-email"
                  id="email"
                  required=""
                  type="email"
                  value=""
                />
              </div>
              <div
                class="chakra-form-control css-0"
                role="group"
              >
                <label
                  class="chakra-form__label css-uvho5g"
                  for="password"
                  id="password-label"
                >
                  Password
                  <span
                    aria-hidden="true"
                    class="chakra-form__required-indicator css-0"
                    role="presentation"
                  >
                    *
                  </span>
                </label>
                <div
                  class="chakra-input__group css-bx0blc"
                  data-group="true"
                >
                  <input
                    aria-required="true"
                    class="chakra-input css-0"
                    data-testid="register-password"
                    id="password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="chakra-input__right-element css-1aezdzf"
                  >
                    <button
                      class="chakra-button css-4xx2wk"
                      type="button"
                    >
                      <svg
                        class="chakra-icon css-onkibi"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <g
                          fill="currentColor"
                        >
                          <path
                            d="M23.2,10.549a20.954,20.954,0,0,0-4.3-3.6l4-3.995a1,1,0,1,0-1.414-1.414l-.018.018a.737.737,0,0,1-.173.291l-19.5,19.5c-.008.007-.018.009-.026.017a1,1,0,0,0,1.631,1.088l4.146-4.146a11.26,11.26,0,0,0,4.31.939h.3c4.256,0,8.489-2.984,11.051-5.8A2.171,2.171,0,0,0,23.2,10.549ZM16.313,13.27a4.581,4.581,0,0,1-3,3.028,4.3,4.3,0,0,1-3.1-.19.253.253,0,0,1-.068-.407l5.56-5.559a.252.252,0,0,1,.407.067A4.3,4.3,0,0,1,16.313,13.27Z"
                          />
                          <path
                            d="M7.615,13.4a.244.244,0,0,0,.061-.24A4.315,4.315,0,0,1,7.5,12,4.5,4.5,0,0,1,12,7.5a4.276,4.276,0,0,1,1.16.173.244.244,0,0,0,.24-.062l1.941-1.942a.254.254,0,0,0-.1-.421A10.413,10.413,0,0,0,12,4.75C7.7,4.692,3.4,7.7.813,10.549a2.15,2.15,0,0,0-.007,2.9,21.209,21.209,0,0,0,3.438,3.03.256.256,0,0,0,.326-.029Z"
                          />
                        </g>
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="chakra-form-control css-0"
                role="group"
              >
                <label
                  class="chakra-form__label css-uvho5g"
                  for="birthdate"
                  id="birthdate-label"
                >
                  Birth Date
                  <span
                    aria-hidden="true"
                    class="chakra-form__required-indicator css-0"
                    role="presentation"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-required="true"
                  class="chakra-input css-0"
                  data-testid="register-birthdate"
                  id="birthdate"
                  required=""
                  type="datetime-local"
                  value=""
                />
              </div>
              <div
                class="chakra-form-control css-0"
                role="group"
              >
                <label
                  class="chakra-form__label css-uvho5g"
                  for="weight"
                  id="weight-label"
                >
                  Weight
                  <span
                    aria-hidden="true"
                    class="chakra-form__required-indicator css-0"
                    role="presentation"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-required="true"
                  class="chakra-input css-0"
                  data-testid="register-weight"
                  id="weight"
                  required=""
                  type="number"
                  value="7"
                />
              </div>
              <div
                class="chakra-stack css-1fivd04"
              >
                <button
                  class="chakra-button css-4xx2wk"
                  type="button"
                >
                  Sign up
                </button>
              </div>
              <div
                class="chakra-stack css-r6ry2f"
              >
                <p
                  class="chakra-text css-xi606m"
                >
                  Already a user?
                   
                  <a
                    class="chakra-link css-ufrqji"
                    href="/login"
                  >
                    Login
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-18308nr"
    >
      <div
        class="chakra-stack css-100xlw7"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <h2
            class="chakra-heading css-5efzzv"
          >
            Sign up
          </h2>
        </div>
        <div
          class="css-16n56wr"
        >
          <div
            class="chakra-stack css-1kkt86i"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <div
                class="css-0"
              >
                <div
                  class="chakra-form-control css-0"
                  role="group"
                >
                  <label
                    class="chakra-form__label css-uvho5g"
                    for="firstName"
                    id="firstName-label"
                  >
                    Name
                    <span
                      aria-hidden="true"
                      class="chakra-form__required-indicator css-0"
                      role="presentation"
                    >
                      *
                    </span>
                  </label>
                  <input
                    aria-required="true"
                    class="chakra-input css-0"
                    data-testid="register-name"
                    id="firstName"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="css-0"
              >
                <div
                  class="chakra-form-control css-0"
                  role="group"
                >
                  <label
                    class="chakra-form__label css-uvho5g"
                    for="lastName"
                    id="lastName-label"
                  >
                    Username
                    <span
                      aria-hidden="true"
                      class="chakra-form__required-indicator css-0"
                      role="presentation"
                    >
                      *
                    </span>
                  </label>
                  <input
                    aria-required="true"
                    class="chakra-input css-0"
                    data-testid="register-username"
                    id="lastName"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="email"
                id="email-label"
              >
                Email address
                <span
                  aria-hidden="true"
                  class="chakra-form__required-indicator css-0"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <input
                aria-required="true"
                class="chakra-input css-0"
                data-testid="register-email"
                id="email"
                required=""
                type="email"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="password"
                id="password-label"
              >
                Password
                <span
                  aria-hidden="true"
                  class="chakra-form__required-indicator css-0"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                class="chakra-input__group css-bx0blc"
                data-group="true"
              >
                <input
                  aria-required="true"
                  class="chakra-input css-0"
                  data-testid="register-password"
                  id="password"
                  required=""
                  type="password"
                  value=""
                />
                <div
                  class="chakra-input__right-element css-1aezdzf"
                >
                  <button
                    class="chakra-button css-4xx2wk"
                    type="button"
                  >
                    <svg
                      class="chakra-icon css-onkibi"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g
                        fill="currentColor"
                      >
                        <path
                          d="M23.2,10.549a20.954,20.954,0,0,0-4.3-3.6l4-3.995a1,1,0,1,0-1.414-1.414l-.018.018a.737.737,0,0,1-.173.291l-19.5,19.5c-.008.007-.018.009-.026.017a1,1,0,0,0,1.631,1.088l4.146-4.146a11.26,11.26,0,0,0,4.31.939h.3c4.256,0,8.489-2.984,11.051-5.8A2.171,2.171,0,0,0,23.2,10.549ZM16.313,13.27a4.581,4.581,0,0,1-3,3.028,4.3,4.3,0,0,1-3.1-.19.253.253,0,0,1-.068-.407l5.56-5.559a.252.252,0,0,1,.407.067A4.3,4.3,0,0,1,16.313,13.27Z"
                        />
                        <path
                          d="M7.615,13.4a.244.244,0,0,0,.061-.24A4.315,4.315,0,0,1,7.5,12,4.5,4.5,0,0,1,12,7.5a4.276,4.276,0,0,1,1.16.173.244.244,0,0,0,.24-.062l1.941-1.942a.254.254,0,0,0-.1-.421A10.413,10.413,0,0,0,12,4.75C7.7,4.692,3.4,7.7.813,10.549a2.15,2.15,0,0,0-.007,2.9,21.209,21.209,0,0,0,3.438,3.03.256.256,0,0,0,.326-.029Z"
                        />
                      </g>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="birthdate"
                id="birthdate-label"
              >
                Birth Date
                <span
                  aria-hidden="true"
                  class="chakra-form__required-indicator css-0"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <input
                aria-required="true"
                class="chakra-input css-0"
                data-testid="register-birthdate"
                id="birthdate"
                required=""
                type="datetime-local"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="weight"
                id="weight-label"
              >
                Weight
                <span
                  aria-hidden="true"
                  class="chakra-form__required-indicator css-0"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <input
                aria-required="true"
                class="chakra-input css-0"
                data-testid="register-weight"
                id="weight"
                required=""
                type="number"
                value="7"
              />
            </div>
            <div
              class="chakra-stack css-1fivd04"
            >
              <button
                class="chakra-button css-4xx2wk"
                type="button"
              >
                Sign up
              </button>
            </div>
            <div
              class="chakra-stack css-r6ry2f"
            >
              <p
                class="chakra-text css-xi606m"
              >
                Already a user?
                 
                <a
                  class="chakra-link css-ufrqji"
                  href="/login"
                >
                  Login
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
